# AI-_tutor_agent

./: .env.example  .gitignore  README.md  proj-description-short.md  proj-description.md
backend/: .gitignore  api.py  evaluation.ipynb  main.py  pyproject.toml
backend/agent/: agent.py
backend/agent/utils/: nodes.py  prompts.py  state.py  tools.py
backend/agent/utils/rag/: doc_loaders.py  retriever.py  splitters.py  vector_store.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatArea.jsx  DarkModeToggle.jsx  FileUpload.jsx  MessageInput.jsx
